portal, still working on it

--- a/des157b/index.html
+++ b/des157b/index.html
@@ -1,13 +1,112 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Home is...DES 157B!</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+
+    <link href="styles.css" rel="stylesheet" />
+    <script src="script.js" defer></script>
+
 </head>
+
 <body>
-    <h1>This is the Home Portal Das</h1>
+    <div id="container"> 
+        <div id="side">
+            <button id="switch-btn">switch</button>
+            <header>
+                <div>
+                    <p class='tags'>&lt;header&gt;</p>
+                    <h1><span class='tags'>&lt;h1&gt;</span>Das<span class='tags'>&lt;/h1&gt;</span></h1>
+                    <h2><span class='tags'>&lt;h2&gt;</span>DES 157B<span class='tags'>&lt;/h2&gt;</span></h2>
+                    <h3><span class='tags'>&lt;h3&gt;</span>Interactive Media III<span class='tags'>&lt;/h3&gt;</span></h3> 
+                    <h4><span class='tags'>&lt;h4&gt;</span>winter 2022<span class='tags'>&lt;/h4&gt;</span></p>
+                    <p class="tags">&lt;/header&gt;</p>
+                </div>
+            </header>
+            
+            <footer>
+                <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
+                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/">Valid HTML 5</a>
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/">Valid CSS</a>
+            </footer>
+        </div>
+
+        <main>
+            <section id="projects">
+                <h5>ministudios</h5>
+                <nav>
+                    <ol>
+                        <li><a href="#">blockbuster video</a></li>
+                        <li><a href="#">check yourself</a></li>
+                        <li><a href="#">library liberty</a></li>
+                    </ol>
+                </nav>
+                <h5>toolkit</h5>
+                <nav>
+                    <ol>
+                        <li><a href="#">touch events</a></li>
+                        <li><a href="#">lazy loader</a></li>
+                        <li><a href="#">arrow functions</a></li>
+                    </ol>
+                </nav>
+
+            </section>
+
+            <section id="research">
+                <h5>research</h5>
+                <nav>
+                    <ul>
+                        <li><a href="#">annotated bibliography</a>
+                        </li>
+                        <li><a href="#">comparative analysis</a>
+                        </li>
+                        <li><a href="#">refined comp</a>
+                        </li>
+                        <li><a href="#">visual research</a>
+                        </li>
+                        <li><a href="#">feasibility report</a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </section>
+
+            <section id="development">
+                <h5>development</h5>
+                <nav>
+                    <ul>
+                        <li><a href="#">mindmap</a></li>
+                        <li><a href="#">storyboard</a></li>
+                        <li><a href="#">flows</a></li>
+                        <li><a href="#">project brief</a></li>
+                        <li><a href="#">software prototype</a></li>
+                        <li><a href="#">version one</a></li>
+                        <li><a href="#">version two</a></li>
+                        <li><a href="#">user test</a></li>
+                        <li><a href="#">version three</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section id="final">
+                <h5>final</h5>
+                <nav>
+                    <ul>
+                        <li><a href="#">case study</a></li>
+                        <li><a href="#">final project</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </main>
+
+        <!-- <div id="arrow">
+            <img src="images/arrow.svg" alt="arrow" width="15%">
+        </div> -->
+    </div>
+
 </body>
+
 </html>
