still working on it

--- a/des157b/index.html
+++ b/des157b/index.html
@@ -22,7 +22,7 @@
                     <h1><span class='tags'>&lt;h1&gt;</span>Das<span class='tags'>&lt;/h1&gt;</span></h1>
                     <h2><span class='tags'>&lt;h2&gt;</span>DES 157B<span class='tags'>&lt;/h2&gt;</span></h2>
                     <h3><span class='tags'>&lt;h3&gt;</span>Interactive Media III<span class='tags'>&lt;/h3&gt;</span></h3> 
-                    <h4><span class='tags'>&lt;h4&gt;</span>winter 2022<span class='tags'>&lt;/h4&gt;</span></p>
+                    <h4><span class='tags'>&lt;h4&gt;</span>winter 2022<span class='tags'>&lt;/h4&gt;</span></h4>
                     <p class="tags">&lt;/header&gt;</p>
                 </div>
             </header>
