--- a/des157b/index.html
+++ b/des157b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container"> 
         <div id="side">
-            <button id="switch-btn">switch</button>
+            <button id="switch-btn">Switch Mode</button>
             <header>
                 <div>
                     <p class='tags'>&lt;header&gt;</p>
