--- a/des157b/index.html
+++ b/des157b/index.html
@@ -39,7 +39,7 @@
                 <h5>ministudios</h5>
                 <nav>
                     <ol>
-                        <li><a href="#">blockbuster video</a></li>
+                        <li><a href="studio1/">blockbuster video</a></li>
                         <li><a href="#">check yourself</a></li>
                         <li><a href="#">library liberty</a></li>
                     </ol>
