new github page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/0ccf362059.js" ></script>
     <title>Das Github Home</title>
 </head>
 <body>
-    <h1>This is my main Github Page</h1>
-    <p><a href="des157a/index.html">DES 157A</a></p>
-    <p><a href="des157b/index.html">DES 157B</a></p>
-    
+    <h1>Das DES 157 Github</h1>
+    <ul id="des157">
+        <li><a href="des157a/index.html">DES 157A</a></li>
+        <li><a href="des157b/index.html">DES 157B</a></li>
+    </ul>
 </body>
 </html>
