--- a/des157b/studio1/index.html
+++ b/des157b/studio1/index.html
@@ -41,6 +41,8 @@
                     <source src="media/beach-bird.webm" type="video/webm">
                     <source src="media/beach-bird.mp4" type="video/mp4">
                 </video>
+
+                <p>Your browser doesn't work with HTML video! Here is the <a href="media/beach-bird.mp4">link of the Video</a>!</p>
             </section>
         </main>
         <footer>
