--- a/des157b/studio1/index.html
+++ b/des157b/studio1/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
     <div id="container">
-        <div id="top-bar">
+        <header id="top-bar">
             <a href="/des157b/"><i class="fas fa-door-open"></i> Back to Portal</a>
             <div id="controllers">
                 <i class="fas fa-pause"></i>
                 <i class="fas fa-expand-alt"></i>
             </div>
-        </div>
+        </header>
         <main>
             <div id="text-container">
                 <h2 id="text-1" class="hidden prefix">CHASING</h2>
