--- a/des157b/index.html
+++ b/des157b/index.html
@@ -40,8 +40,8 @@
                 <nav>
                     <ol>
                         <li><a href="studio1/">blockbuster video</a></li>
-                        <li><a href="#">check yourself</a></li>
-                        <li><a href="#">library liberty</a></li>
+                        <li><a href="studio2/">check yourself</a></li>
+                        <li><a href="studio3/">library liberty</a></li>
                     </ol>
                 </nav>
                 <h5>toolkit</h5>
