--- a/des157b/index.html
+++ b/des157b/index.html
@@ -78,7 +78,7 @@
                 <h5>development</h5>
                 <nav>
                     <ul>
-                        <li><a href="#">mindmap</a></li>
+                        <li><a href="final/mindmap.png">mindmap</a></li>
                         <li><a href="#">storyboard</a></li>
                         <li><a href="#">flows</a></li>
                         <li><a href="#">project brief</a></li>
