--- a/des157b/studio3/index.html
+++ b/des157b/studio3/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="handf-style.css">
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
     <script src="https://kit.fontawesome.com/0ccf362059.js" crossorigin="anonymous"></script>
@@ -15,11 +16,11 @@
 </head>
 <body>
     <div id="container">
-        <main>
-            <section>
-                <div id="form-container">
+        <main class="userportal">
+            <section id="input-section">
+                <div id="form-container" >
                     <i class="fa-brands fa-buromobelexperte"></i>
-                    <form id="login">
+                    <form id="login-form">
                         <div class="inputbox-container">
                             <input type="text" name="username" 
                             id="username-login" class="inputbox">
@@ -31,18 +32,23 @@
                         </div>
                         <div id="btn-container">
                             <input type="submit" id="login-btn" value="Log In">
-                            <a id="signup-btn" href="signup.html">Don't have Account?<br>Sign Up</a>
+                            <a id="go-to-signup-btn" href="signup.html">Don't have Account?<br>Sign Up</a>
                         </div>
                     </form>
-                </div>
-                <div>
-
+                    <p id="error-message" class="hidden"></p>
                 </div>
             </section>
         </main>
-        <footer>
-
-        </footer>
+        <div id="headerandfooter">
+            <header>
+                <h1><span id="portal"><a href="/des157b/">DES 157B</a></span> <i class="fa-solid fa-chevron-right"></i> <span id="title">User Management System</span></h1>
+            </header>
+            <footer>
+                <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
+                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/studio3">Valid HTML 5</a>
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/studio3">Valid CSS</a>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
