--- a/des157b/studio3/sample-2.html
+++ b/des157b/studio3/sample-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample 2 - create account</title>
+    <title>Sample 2 - Create Account</title>
     <style>
         #profile-image {
             border-radius: 100px;
