--- a/des157b/studio3/profile.html
+++ b/des157b/studio3/profile.html
@@ -22,7 +22,6 @@
                     <div id="top">
                         <img id="profile-pic" src="https://picsum.photos/200" alt="Profile-Pic">
                         <h2 id="name">Das Liao</h2>
-                        <button id="security-btn">Security</button>
                         <button id="saved-quotes-btn">Saved Quotes</button>
                     </div>
                     <button id="logout">Log Out</button>
@@ -39,6 +38,20 @@
                     <p id="shuffle-quote"><i class="fa-solid fa-shuffle"></i> SHUFFLE THE QUOTE</p>
                 </div>
             </section>
+            <section id="saved-quotes" class="visible">
+                <div id="quote-1" class="quotes-box">
+                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
+                    <p class="authors">This Author</p>
+                </div>
+                <div id="quote-2" class="quotes-box">
+                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
+                    <p class="authors">This Author</p>
+                </div>
+                <div id="quote-3" class="quotes-box">
+                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
+                    <p class="authors">This Author</p>
+                </div>
+            </section>
         </main>
         <div id="headerandfooter">
             <header>
@@ -46,8 +59,8 @@
             </header>
             <footer>
                 <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
-                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/studio3">Valid HTML 5</a>
-                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/studio3">Valid CSS</a>
+                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/studio3/profile.html">Valid HTML 5</a>
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/studio3/profile.html">Valid CSS</a>
             </footer>
         </div>
     </div>
