--- a/des157b/studio3/signup.html
+++ b/des157b/studio3/signup.html
@@ -48,8 +48,8 @@
             </header>
             <footer>
                 <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
-                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/studio3">Valid HTML 5</a>
-                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/studio3">Valid CSS</a>
+                <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157b/studio3/signup.html">Valid HTML 5</a>
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157b/studio3/signup.html">Valid CSS</a>
             </footer>
         </div>
     </div>
