--- a/des157b/studio3/profile.html
+++ b/des157b/studio3/profile.html
@@ -22,35 +22,25 @@
                     <div id="top">
                         <img id="profile-pic" src="https://picsum.photos/200" alt="Profile-Pic">
                         <h2 id="name">Das Liao</h2>
+                        <button id="todays-quotes-btn">Today's Quotes</button>
                         <button id="saved-quotes-btn">Saved Quotes</button>
                     </div>
                     <button id="logout">Log Out</button>
                 </div>
             </section>
-            <section id="right" class="hidden">
+            <section id="right" >
                 <div id="quote-container">
                     <p>Today's Quote</p>
-                    <p id="quote">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
-                    <p id="author">This Author</p>
+                    <p id="quote">To Display the Quote</p>
+                    <a id="author" href="">Author</a>
                 </div>
                 <div id="quote-controller">
                     <p id="save-quote"><i class="fa-solid fa-bookmark"></i> SAVE</p>
                     <p id="shuffle-quote"><i class="fa-solid fa-shuffle"></i> SHUFFLE THE QUOTE</p>
                 </div>
             </section>
-            <section id="saved-quotes" class="visible">
-                <div id="quote-1" class="quotes-box">
-                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
-                    <p class="authors">This Author</p>
-                </div>
-                <div id="quote-2" class="quotes-box">
-                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
-                    <p class="authors">This Author</p>
-                </div>
-                <div id="quote-3" class="quotes-box">
-                    <p class="quotes">To fly as fast as thought, you must begin by knowing that you have already arrived.</p>
-                    <p class="authors">This Author</p>
-                </div>
+            <section id="saved-quotes" class="hidden">
+
             </section>
         </main>
         <div id="headerandfooter">
