--- a/des157b/studio3/signup.html
+++ b/des157b/studio3/signup.html
@@ -71,8 +71,8 @@
             user.set('username', username);
             user.set('email', email);
             user.set('password', password);
-            let profileImageID = Math.floor(Math.random()*12345678);
-            user.set('profilepicid', profileImageID);
+            // let profileImageID = Math.floor(Math.random()*12345678);
+            // user.set('profilepicid', profileImageID);
 
             try {
                 let userResult = await user.signUp();
