--- a/des157b/index.html
+++ b/des157b/index.html
@@ -59,15 +59,15 @@
                 <h5>research</h5>
                 <nav>
                     <ul>
-                        <li><a href="#">annotated bibliography</a>
+                        <li><a href="research/annotated_bibliography">annotated bibliography</a>
                         </li>
-                        <li><a href="#">comparative analysis</a>
+                        <li><a href="research/comparative_analysis/">comparative analysis</a>
                         </li>
-                        <li><a href="#">refined comp</a>
+                        <li><a href="research/refined_comp">refined comp</a>
                         </li>
-                        <li><a href="#">visual research</a>
+                        <li><a href="research/visual_research">visual research</a>
                         </li>
-                        <li><a href="#">feasibility report</a>
+                        <li><a href="research/feasibility_report">feasibility report</a>
                         </li>
                     </ul>
                 </nav>
