--- a/des157b/index.html
+++ b/des157b/index.html
@@ -59,7 +59,7 @@
                 <h5>research</h5>
                 <nav>
                     <ul>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/Annotated-Bibliography-dc1366df5d2d43e0bcb2fa6e235bb40a">annotated bibliography</a>
+                        <li><a href="research/annotated_bibliography/">annotated bibliography</a>
                         </li>
                         <li><a href="research/comparative_analysis/">comparative analysis</a>
                         </li>
