--- a/des157b/index.html
+++ b/des157b/index.html
@@ -65,7 +65,7 @@
                         </li>
                         <li><a href="research/refined_comp">refined comp</a>
                         </li>
-                        <li><a href="research/visual_research">visual research</a>
+                        <li><a href="https://somber-ptarmigan-a75.notion.site/Mood-Board-c8c38449a5504832a0ea3a72a47b68d6">visual research</a>
                         </li>
                         <li><a href="research/feasibility_report">feasibility report</a>
                         </li>
@@ -79,9 +79,9 @@
                 <nav>
                     <ul>
                         <li><a href="final/mindmap.png">mindmap</a></li>
-                        <li><a href="#">storyboard</a></li>
+                        <li><a href="https://somber-ptarmigan-a75.notion.site/Story-Board-4fa3a9dcbd77452587d5fe2910b65165">storyboard</a></li>
                         <li><a href="#">flows</a></li>
-                        <li><a href="#">project brief</a></li>
+                        <li><a href="https://somber-ptarmigan-a75.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
                         <li><a href="#">software prototype</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
