--- a/des157b/index.html
+++ b/des157b/index.html
@@ -80,7 +80,7 @@
                     <ul>
                         <li><a href="final/mindmap.png">mindmap</a></li>
                         <li><a href="https://somber-ptarmigan-a75.notion.site/Story-Board-4fa3a9dcbd77452587d5fe2910b65165">storyboard</a></li>
-                        <li><a href="#">flows</a></li>
+                        <li><a href="https://somber-ptarmigan-a75.notion.site/User-Flow-c57630e5c7bb4d12b91ea346f3a89c9c">flows</a></li>
                         <li><a href="https://somber-ptarmigan-a75.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
                         <li><a href="#">software prototype</a></li>
                         <li><a href="#">version one</a></li>
