--- a/des157b/index.html
+++ b/des157b/index.html
@@ -49,7 +49,7 @@
                     <ol>
                         <li><a href="#">touch events</a></li>
                         <li><a href="#">lazy loader</a></li>
-                        <li><a href="#">arrow functions</a></li>
+                        <li><a href="arrow/">arrow functions</a></li>
                     </ol>
                 </nav>
 
