--- a/des157b/index.html
+++ b/des157b/index.html
@@ -67,7 +67,7 @@
                         </li>
                         <li><a href="https://somber-ptarmigan-a75.notion.site/Mood-Board-c8c38449a5504832a0ea3a72a47b68d6">visual research</a>
                         </li>
-                        <li><a href="research/feasibility_report">feasibility report</a>
+                        <li><a href="https://somber-ptarmigan-a75.notion.site/Coding-Components-Feasibility-Report-b9645eb18804488a8f5ae3f137e54904">feasibility report</a>
                         </li>
                     </ul>
                 </nav>
