--- a/des157b/index.html
+++ b/des157b/index.html
@@ -65,9 +65,9 @@
                         </li>
                         <li><a href="research/refined_comp">refined comp</a>
                         </li>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/Mood-Board-c8c38449a5504832a0ea3a72a47b68d6">visual research</a>
+                        <li><a href="https://dasliao.notion.site/Mood-Board-c8c38449a5504832a0ea3a72a47b68d6">visual research</a>
                         </li>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/Coding-Components-Feasibility-Report-b9645eb18804488a8f5ae3f137e54904">feasibility report</a>
+                        <li><a href="research/feasibility_report">feasibility report</a>
                         </li>
                     </ul>
                 </nav>
@@ -79,9 +79,9 @@
                 <nav>
                     <ul>
                         <li><a href="final/mindmap.png">mindmap</a></li>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/Story-Board-4fa3a9dcbd77452587d5fe2910b65165">storyboard</a></li>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/User-Flow-c57630e5c7bb4d12b91ea346f3a89c9c">flows</a></li>
-                        <li><a href="https://somber-ptarmigan-a75.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
+                        <li><a href="https://dasliao.notion.site/Story-Board-4fa3a9dcbd77452587d5fe2910b65165">storyboard</a></li>
+                        <li><a href="https://dasliao.notion.site/User-Flow-c57630e5c7bb4d12b91ea346f3a89c9c">flows</a></li>
+                        <li><a href="https://dasliao.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
                         <li><a href="#">software prototype</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
