--- a/des157b/index.html
+++ b/des157b/index.html
@@ -82,6 +82,7 @@
                         <li><a href="https://dasliao.notion.site/Story-Board-4fa3a9dcbd77452587d5fe2910b65165">storyboard</a></li>
                         <li><a href="https://dasliao.notion.site/User-Flow-c57630e5c7bb4d12b91ea346f3a89c9c">flows</a></li>
                         <li><a href="https://dasliao.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
+                        <li><a href="https://dasliao.notion.site/Thumbnails-Sketch-994eb263c5e3457f8dd38d659a599b51">Thumbnails & Sketch</a></li>
                         <li><a href="#">software prototype</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
