--- a/des157b/index.html
+++ b/des157b/index.html
@@ -47,7 +47,7 @@
                 <h5>toolkit</h5>
                 <nav>
                     <ol>
-                        <li><a href="#">touch events</a></li>
+                        <li><a href="touch-event/">touch events</a></li>
                         <li><a href="#">lazy loader</a></li>
                         <li><a href="arrow/">arrow functions</a></li>
                     </ol>
@@ -83,7 +83,7 @@
                         <li><a href="https://dasliao.notion.site/User-Flow-c57630e5c7bb4d12b91ea346f3a89c9c">flows</a></li>
                         <li><a href="https://dasliao.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
                         <li><a href="https://dasliao.notion.site/Thumbnails-Sketch-994eb263c5e3457f8dd38d659a599b51">Thumbnails & Sketch</a></li>
-                        <li><a href="#">software prototype</a></li>
+                        <li><a href="https://www.figma.com/file/0xOYvPsOAj046AVwd07YKo/Final---Cultures.space?node-id=0%3A1">software prototype</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
                         <li><a href="#">user test</a></li>
