--- a/des157b/index.html
+++ b/des157b/index.html
@@ -84,10 +84,10 @@
                         <li><a href="https://dasliao.notion.site/Project-Brief-857d5a017c7d4aa3819e327cedc52c03">project brief</a></li>
                         <li><a href="https://dasliao.notion.site/Thumbnails-Sketch-994eb263c5e3457f8dd38d659a599b51">Thumbnails & Sketch</a></li>
                         <li><a href="https://www.figma.com/file/0xOYvPsOAj046AVwd07YKo/Final---Cultures.space?node-id=0%3A1">software prototype</a></li>
-                        <li><a href="https://www.cultures.space/v1">version one</a></li>
-                        <li><a href="https://www.cultures.space/v2">version two</a></li>
+                        <li><a href="https://v1.cultures.space/">version one</a></li>
+                        <li><a href="https://v2.cultures.space/">version two</a></li>
                         <li><a href="#">user test</a></li>
-                        <li><a href="https://www.cultures.space/v3">version three</a></li>
+                        <li><a href="https://v3.cultures.space/">version three</a></li>
                     </ul>
                 </nav>
             </section>
