--- a/des157b/index.html
+++ b/des157b/index.html
@@ -96,7 +96,7 @@
                 <h5>final</h5>
                 <nav>
                     <ul>
-                        <li><a href="#">case study</a></li>
+                        <li><a href="files/final_Presentation.pdf">case study</a></li>
                         <li><a href="https://www.cultures.space/">final project</a></li>
                     </ul>
                 </nav>
